--- a/.github/workflows/test1-lab.yml
+++ b/.github/workflows/test1-lab.yml
@@ -19,7 +19,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: us-east-1  # You can change this to your desired AWS region
+        aws-region: us-east-1  
 
     - name: Sync files to S3
       run: |
